Crash on exit of edit mode after deleting contents of fluid domain #29696

Closed
opened 2011-12-26 22:41:47 +01:00 by Robert Townsend · 3 comments

%%%Similar to bug #20790 (reported fixed and closed).

Steps to recreate from uploaded model:
Load model FluidBug_001.blend
Note that you're in Edit mode.
Hit 'x' to delete, select 'All' (just deleted everything in the domain box).
Tab to exit edit mode.
Segmentation fault.

Steps to recreate from scratch:
Execute File/New to bring up the default model
Size up the default cube to 10 times the original size
In the Physics area, define this to be a fluid domain
Create a UV sphere.
In the Physics area, define it to be an inflow.
From the Outliner, select the domain, named Cube, one level down.
Note that now in Edit mode.
Hit 'x' to delete domain, All
Note that Cube is still in Outliner.
Tab to exit edit mode.
Segmentation fault.

CPU: Intel 9450
RAM: 8GB
GFX: nVidia Geforce 8800 GTS 256MB
OS: Ubuntu Linux 64-bit 10.04LTS, all patches updated as of Dec 26, 2011.
Drivers: NVIDIA 195.36.24
Blender: 2.61 64-bit official release (blender-2.61-linux-glibc27-x86_64.tar.bz2). Also tested GraphicAll.org Revision 42875, built 23:57 December 25th, 2011, same problem occurs.
%%%

%%%Similar to bug #20790 (reported fixed and closed). Steps to recreate from uploaded model: Load model FluidBug_001.blend Note that you're in Edit mode. Hit 'x' to delete, select 'All' (just deleted everything in the domain box). Tab to exit edit mode. Segmentation fault. Steps to recreate from scratch: Execute File/New to bring up the default model Size up the default cube to 10 times the original size In the Physics area, define this to be a fluid domain Create a UV sphere. In the Physics area, define it to be an inflow. From the Outliner, select the domain, named Cube, one level down. Note that now in Edit mode. Hit 'x' to delete domain, All Note that Cube is still in Outliner. Tab to exit edit mode. Segmentation fault. CPU: Intel 9450 RAM: 8GB GFX: nVidia Geforce 8800 GTS 256MB OS: Ubuntu Linux 64-bit 10.04LTS, all patches updated as of Dec 26, 2011. Drivers: NVIDIA 195.36.24 Blender: 2.61 64-bit official release (blender-2.61-linux-glibc27-x86_64.tar.bz2). Also tested GraphicAll.org Revision 42875, built 23:57 December 25th, 2011, same problem occurs. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev42942. Thanks for the report, closing.%%%

%%%Fixed in svn rev42942. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29696
No description provided.