Fix #29696: Crash on exit of edit mode after deleting contents of fluid domain

Added NULL-check to copying material number and flags when loading cache